Closed Bug 1210086 Opened 10 years ago Closed 10 years ago

using bookmarks toolbar spews many warnings about "unsupported/unknown widget type" and seems slow and badly formatted

Categories

(Core :: Widget: Gtk, defect)

42 Branch
Unspecified
Linux
defect
Not set
minor

Tracking

()

VERIFIED FIXED
mozilla44
Tracking Status
firefox42 + verified
firefox43 --- fixed
firefox44 --- fixed

People

(Reporter: david+bugs, Assigned: pjasicek)

References

Details

(Keywords: regression)

Attachments

(3 files)

Using a freshly compiled Firefox 42.0b2 (compiled from http://hg.mozilla.org/releases/mozilla-beta/rev/cab2bec68d53 on Debian GNU/Linux 8.2 (stable/jessie) x86_64 with a new blank profile and no addons installed: If the bookmarks toolbar is displayed, every time the mouse is moved over it or every time it is interacted with in any way, Firefox displays tons of warnings like: ** (firefox:17877): WARNING **: Unsupported widget type: 1 ** (firefox:17877): WARNING **: Unknown widget type: 1 (the number always seems to be 1 but the adjective is randomly "unknown" or "unsupported"). This did not occur with Firefox 41. This is fairly minor because the toolbar still seems to work well. However, it seems slow in comparison to previous version, and the spacing between bookmarks is visibly wrong (reduced to zero). In case this is relevant, the version of Gtk+ involved (from Debian stable) is libgtk2.0-0 version 2.24.25-3.
Did you manually configure this to use gtk2 instead of gtk3? Does this happen on an official mozilla build?
Component: Theme → Widget: Gtk
Flags: needinfo?(david+bugs)
Product: Firefox → Core
(can you do a before/after screenshot of the buttons you're talking about?)
Same here on both official mozilla builds, and ubuntu firefox-next ppa ones. Screenshot attached Presumably fallout from reverting back to gtk2 for beta for the time being? http://hg.mozilla.org/releases/mozilla-beta/rev/2ad882095986 Perhaps related to fix for this in gtk3? https://bugzilla.mozilla.org/show_bug.cgi?id=1160154
(In reply to johnmbryant from comment #3) > Created attachment 8668062 [details] > Lack of padding between personal toolbar bookmark items > > Same here on both official mozilla builds, and ubuntu firefox-next ppa ones. > > Screenshot attached > > Presumably fallout from reverting back to gtk2 for beta for the time being? > > http://hg.mozilla.org/releases/mozilla-beta/rev/2ad882095986 > > Perhaps related to fix for this in gtk3? > > https://bugzilla.mozilla.org/show_bug.cgi?id=1160154 That sounds likely. Should we back that out of beta? Martin?
Blocks: 1160154
Flags: needinfo?(david+bugs) → needinfo?(stransky)
* The same occurs with the official build of Firefox 42.0b2 - no difference with my home build as far as I can tell. * I don't remember doing anything special to use Gtk2 instead of Gtk3. According to about:buildconfig the configure arguments I used were "--enable-application=browser --prefix=/opt/firefox-42.0b2 '--enable-optimize=-march=nocona -O3' --enable-official-branding --enable-startup-notification --disable-tests --disable-mochitest" * I do have the libgtk-3-0 and libgtk-3-dev packages installed. * Screenshots are here: <URL: http://www.madore.org/~david/.tmp/bug1210086-firefox-41-screenshot.png > <URL: http://www.madore.org/~david/.tmp/bug1210086-firefox-42-screenshot.png > (taken with a blank profile - all I did was enable the bookmarks toolbar and add one bookmark there for visibility). The first has correct spacing, the second (taken with the official 42.0b2 build) does not.
Need a couple of "case MOZ_GTK_TOOLBAR_BUTTON:" labels in gtk2drawing.c
[Tracking Requested - why for this release]: Recent regression.
Blocks: 1207310
Keywords: regression
Added missing MOZ_GTK_TOOLBAR_BUTTON cases in gtk2drawing.c try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=3bc884b96b9f
Attachment #8668377 - Flags: review?(karlt)
(In reply to :Gijs Kruitbosch from comment #4) > That sounds likely. Should we back that out of beta? Martin? No need to back out, this patch should fix it.
Flags: needinfo?(stransky)
Comment on attachment 8668377 [details] [diff] [review] 001_gtk2_toolbar_compat.patch Thanks!
Attachment #8668377 - Flags: review?(karlt) → review+
Assignee: nobody → pjasicek
visual regression, tracking.
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Issue with no spacing between bookmark toolbar items still present in 42 beta 4. Fix needs to be applied to that, as at present that is the only release channel being built for GTK2 by default, and so shows up the bug in mozilla releases.
Attached image no spacing in 42b4
Petr or Karl, can you please request uplift on this patch assuming we're happy with baking etc.?
Flags: needinfo?(pjasicek)
Flags: needinfo?(karlt)
Comment on attachment 8668377 [details] [diff] [review] 001_gtk2_toolbar_compat.patch [Feature/regressing bug #]: [User impact if declined]: Toolbar buttons zero space between them Steps to reproduce: 1) Launch firefox from console 2) Warnings are displayed: ** (firefox:17877): WARNING **: Unsupported widget type: 1 3) Toolbar buttons have no spaces between them [Describe test coverage new/current, TBPL]: Manual testing TreeHerder: https://treeherder.mozilla.org/#/jobs?repo=try&revision=3bc884b96b9f [Risks and why]: Low, added a new widget which affects only drawing of toolbar buttons [String/UUID change made/needed]: none
Flags: needinfo?(pjasicek)
Attachment #8668377 - Flags: approval-mozilla-beta?
Attachment #8668377 - Flags: approval-mozilla-aurora?
Comment on attachment 8668377 [details] [diff] [review] 001_gtk2_toolbar_compat.patch Remove a warning, taking it. Should be in 42 beta 5.
Attachment #8668377 - Flags: approval-mozilla-beta?
Attachment #8668377 - Flags: approval-mozilla-beta+
Attachment #8668377 - Flags: approval-mozilla-aurora?
Attachment #8668377 - Flags: approval-mozilla-aurora+
Confirmed fixed in 42 beta 5. Thanks!
Status: RESOLVED → VERIFIED
Flags: needinfo?(karlt)
QA Whiteboard: [good first verify]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: