Bug 1210086 - Fix warnings caused by toolbar buttons in gtk2. r=karl, a=sylvestre

--HG--
extra : source : 36cd98d7f222d2e4177dc43eb55e0b1f655b55dd